LK-10: Fix breadcrumb row from changing colour on narrow width

--- a/ckanext/ckanext-apicatalog_ui/less/layout.less
+++ b/ckanext/ckanext-apicatalog_ui/less/layout.less
@@ -21,6 +21,10 @@
   background-image: none;
 }
 
+[role=main] .container {
+  background-color: @white;
+}
+
 [role=main], .main {
   position: relative;
   padding-bottom: 20px;
