--- a/ckanext/ckanext-apicatalog_ui/less/toolbar.less
+++ b/ckanext/ckanext-apicatalog_ui/less/toolbar.less
@@ -33,19 +33,6 @@
 .toolbar .breadcrumb a {
   color: @breadcrumbTextColor;
 }
-@media (max-width: 767px) {
-  .toolbar .breadcrumb {
-    color:#fff;
-    text-shadow:none;
-    .home {
-      display:none;
-    }
-    a {
-      color:#fff;
-      text-shadow:none;
-    }
-  }
-}
 
 .toolbar .breadcrumb .active a,
 .toolbar .breadcrumb a.active {
